# EU-digital-identity-wallet

./: .gitattributes  .gitignore  EXTENSION_EVALUATION.md  build_and_push.sh  cloud-run-service.yaml  package-lock.json  patch_error.diff  patch_login.diff  test_json.js
.github/workflows/: ci.yml  e2e.yml
specs/: certificate-authority.md  document-signing.md  pid-provider.md  pseudonym.md  relying-party.md  trusted-list.md  wallet.md
src/: README.md  docker-compose.dev.yml  docker-compose.yml
src/certificate-authority/: .gitignore  Dockerfile  pyproject.toml
src/certificate-authority/app/: app.py  db.py  signing.py
src/certificate-authority/app/keys/: ca_cert.pem
src/certificate-authority/app/static/css/: stylesheet.css
src/certificate-authority/app/templates/: dashboard.html  login.html
src/certs/: generate.sh  root-ca.crt  wildcard.test.cnf  wildcard.test.cnf.template  wildcard.test.crt  wildcard.test.key
src/e2e/: .gitignore  README.md  package-lock.json  package.json  playwright.config.ts
src/pid-db/: Dockerfile  init.sql
src/pid-provider/: .dockerignore  Dockerfile  init.sql  requirements.txt
src/relying-party/: Dockerfile
src/reverse-proxy/: Dockerfile  cloud-run-entrypoint.sh  cloud-run-nginx.conf  cloud-run-nginx.conf.template  dns.conf  dns.conf.template  docker-entrypoint.sh  index.html
src/trusted-list/: .dockerignore  Dockerfile  init.sql
src/wallet-backend/: .gitignore  Dockerfile  pyproject.toml
src/wallet-backend/app/: app.py  db.py  signing.py  totp.py
src/wallet-frontend/: Dockerfile  cloud-run-nginx.conf  index.html  (+3 more)
(+89 files in other folders)
